Finalizado nav da pagina

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     </head>
     <body>
         <nav>
-            <p>Minha Página</p>
+            <h1>Minha Página</h1>
             <ul>
                 <li><a href="#servicos">Serviços</a></li>
                 <li><a href="#clientes">Clientes</a></li>
-                <li>Parceiros</li>
-                <li>Time</li>
-                <li>Contato</li>
+                <li><a href="#parceiros">Parceiros</a></li>
+                <li><a href=#time>Time</a></li>
+                <li><a href="#contato">Contato</a></li>
             </ul>
         </nav>
         <p>Minha primeira página.</p>
@@ -44,6 +44,30 @@
             <div>
                 <img src="img/pexels-fauxels-3184465.jpg" width="300px">
             </div>
+        </section>
+        <section id="parceiros">
+            <h2>PARCEIROS</h2>
+            <p>
+                Nossos parceiros trabalham juntos para entregar a melhor solução para o nosso cliente.
+            </p>
+            <div>
+                <img src="img/google.png" width="150px">
+                <img src="img/digital.jpg" width="200px">
+            </div>
+        </section>
+        <section id="time">
+            <h2>TIME</h2>
+            <p>
+                Nosso time trabalha com muita qualidade e empenho para
+                para entregar o melhor produto para o nosso cliente.
+            </p>
+            <div>
+                <img src="img/time.jpg" width="300" >
+            </div>
+            
+        </section>
+        <section id="contato">
+            <h2>CONTATO</h2>
         </section>
         
         <footer>Desenvolvido por Diego</footer>
