--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Página incial</title>
+        <link rel="stylesheet" type="text/css" href="estilo.css">
     </head>
     <body>
         <nav>
@@ -51,8 +52,8 @@
                 Nossos parceiros trabalham juntos para entregar a melhor solução para o nosso cliente.
             </p>
             <div>
-                <img src="img/google.png" width="150px">
-                <img src="img/digital.jpg" width="200px">
+                <a href="https://www.google.com.br/" target="_blank"><img src="img/google.png" width="150px" ></a>
+                <a href="https://digitalinnovation.one/" target="_blank"><img src="img/digital.jpg" width="200px"></a>  
             </div>
         </section>
         <section id="time">
@@ -62,14 +63,25 @@
                 para entregar o melhor produto para o nosso cliente.
             </p>
             <div>
-                <img src="img/time.jpg" width="300" >
+                <img src="img/time.jpg" width="300">
             </div>
             
         </section>
         <section id="contato">
             <h2>CONTATO</h2>
+            <p> 
+                Entre em contato com nossa equipe.
+            </p>
+            <div>
+                <img src="img/email.png" width="30px">
+                <a href="mailto:88888888">contato@empresa.com</a>
+            </div>
+            <div>
+                <img src="img/fone.jpg" width="30px">
+                <a>(83)99999-9999</a>
+            </div>
         </section>
         
-        <footer>Desenvolvido por Diego</footer>
+        <footer>Todos os direitos reservados</footer>
     </body>
 </html>
